commit 23: update statistical

--- a/templates/contributions_detail.html
+++ b/templates/contributions_detail.html
@@ -161,6 +161,7 @@
                 <div class="navigation-options">
                   <!-- Add your navigation options here -->
                   <h4 style="margin-bottom: 5px;">Contribution feedbacks:</h4>
+                  <smal>({{dayCanComment}} days left to give feedbacks)</small>
                   <div class="feedback-box">
                     {% if comments.count == 0 %}
                       <p>
