--- a/templates/room.html
+++ b/templates/room.html
@@ -197,7 +197,7 @@
               <div class="threads scroll" id="message-container">
                 {% if message.count == 0 %}
                   <p>
-                    <strong>No one has comment yet...</strong>
+                    <strong>No messages yet...</strong>
                   </p>
                 {% else %}
                   {% for message in message %}
