--- a/templates/faculty_file.html
+++ b/templates/faculty_file.html
@@ -179,6 +179,7 @@
               {% endif %}
               {% if not is_guest and not is_manager %}
               <h5 style="margin-bottom: 5px;">Contribution feedbacks:</h5>
+              <smal>({{dayCanComment}} days left to give feedbacks)</small>
               <div class="feedback-box">
                 {% if contribution.comments.count == 0 %}
                   <p><strong>No one has commented yet...</strong></p>
