--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -34,7 +34,7 @@
 
     <section class="apply-now" id="apply">
         <div class="container profile-container">
-            <h1 class="mb-4">Files Uploaded Successfully!</h1>
+            <h1 class="mb-4">contribution Uploaded Successfully!</h1>
             <div class="text-center"> <!-- Center the button -->
                 <a href="{% url 'file_upload' %}" class="btn btn-primary">Upload another file</a>
             </div>
