--- a/templates/room_question.html
+++ b/templates/room_question.html
@@ -45,7 +45,11 @@
             <h3 class="text-center">Into Room: {{ room.name }}</h3>
             <label class=" mt-3 form-label" for="id_faculty">Question: {{ room.question }}</label>
         </div>
-
+        {% for message in messages %}
+        <div class="mb-3">
+            <p class="{{ message.tags }}" style="color: red; font-size: 16px">{{ message }}</p>
+        </div>
+        {% endfor %}
         <div class="mb-3">
             <form method="post">
                 {% csrf_token %}
