--- a/templates/room_form.html
+++ b/templates/room_form.html
@@ -38,11 +38,8 @@
 
 <section class="apply-now" id="apply">
   <div class="container profile-container">
-    {% if page == "create" %}
-    <h1 class="mt-4">Create New Chat Room</h1>
-    {% else %}
-        <h1 class="mt-4">Update Chat Room</h1>
-    {% endif %}
+    <h1 class="mb-4">Create/Update Study Room</h1>
+
     <!-- Personal Information Form -->
     <form class="form" action="" method="POST">
         {% csrf_token %}
@@ -51,38 +48,38 @@
             <select name="faculty" id="id_faculty" class="form-control" required>
               <option value="">Select ...</option>
               {% for faculty in faculties %}
-              <option value="{{ faculty.pk }}">{{ faculty.name }}</option>
+              <option value="{{ faculty.id }}">{{ faculty.name }}</option>
               {% endfor %}
             </select>
         </div>
 
         <div class="mb-3">
             <label for="room_name" class="form-label">Room Name:</label>
-            <input type="text" class="form-control" id="name" name="name" value="" required>
+            <input type="text" class="form-control" id="name" name="name" value="{{ room.name }}" required>
         </div>
 
         <div class="mb-3">
           
             <label for="room_description" class="form-label">Room Description:</label>
-            <textarea type="text" class="form-control" id="description" name="description" value="" required></textarea>
+            <textarea type="text" class="form-control" id="description" name="description" required>
+                {{ room.description }}
+            </textarea>            
         </div>
 
-        <div class="mb-3">
-            <label for="room_status" class="form-label">Room Status (Select):</label>
-            <select id="room_status" class="form-control" name="is_private" onchange="toggleQuestionAnswer();" required>
-              <option value="False">Public</option>
-              <option value="True">Private</option>
-            </select>            
-        </div>
+        <select id="room_status" class="form-control" name="is_private" onchange="toggleQuestionAnswer();" required>
+            <option value="False" {% if not room.is_private %}selected{% endif %}>Public</option>
+            <option value="True" {% if room.is_private %}selected{% endif %}>Private</option>
+        </select>
+        
 
         <div class="mb-3 question-answer">
             <label for="room_question" class="form-label">Room Question:</label>
-            <input type="text" class="form-control" id="question" name="question" value="" required>
+            <input type="text" class="form-control" id="question" name="question" value="{{ room.question }}" required>
         </div>
 
         <div class="mb-3 question-answer">
             <label for="room_anwser" class="form-label">Room Keyword:</label>
-            <input type="text" class="form-control" id="answer" name="answer" value="" required>
+            <input type="text" class="form-control" id="answer" name="answer" value="{{ room.answer }}" required>
         </div>
       
         <div class="text-center">
@@ -93,17 +90,17 @@
   </div>
 </section>
 <script>
-  function toggleQuestionAnswer() {
-      var isPrivate = document.getElementById('room_status').value === 'True';
-      var questionsAndAnswers = document.querySelectorAll('.question-answer');
-      for (var i = 0; i < questionsAndAnswers.length; i++) {
-          questionsAndAnswers[i].style.display = isPrivate ? 'block' : 'none';
-          var inputs = questionsAndAnswers[i].querySelectorAll('input');
-          for (var j = 0; j < inputs.length; j++) {
-              inputs[j].required = isPrivate;
-          }
-      }
-  }
-  document.addEventListener('DOMContentLoaded', toggleQuestionAnswer);
+    function toggleQuestionAnswer() {
+        var isPrivate = document.getElementById('room_status').value === 'True';
+        var questionsAndAnswers = document.querySelectorAll('.question-answer');
+        for (var i = 0; i < questionsAndAnswers.length; i++) {
+            questionsAndAnswers[i].style.display = isPrivate ? 'block' : 'none';
+            var inputs = questionsAndAnswers[i].querySelectorAll('input');
+            for (var j = 0; j < inputs.length; j++) {
+                inputs[j].required = isPrivate;
+            }
+        }
+    }
+    document.addEventListener('DOMContentLoaded', toggleQuestionAnswer);
 </script>
 {% endblock content %}
